Static Challenge Complete

--- a/index.html
+++ b/index.html
@@ -6,11 +6,57 @@
     <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
+
   <body>
+    <header>
+      <div class="header">
+        <h1 id="Landmarks">5280 Landmarks</h1>
+        <h1 id="Login">Login</h1>
+      </div>
+    </header>
+    <br>
+    <ul id="Links">
+      <li><a href="#Buildings">Buildings</a></li>
+      <li><a href="#Art">Art</a></li>
+      <li><a href="#Featured">Featured</a></li>
+    </ul>
+
+    <div class="museum">
+      <div class="dam">Denver Art Museum</div>
+      <img src="images/1.jpg" alt="Museum" style="width: 100%;">
+
+    </div>
+
+    <div class="block">
+      <p class="text">Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.</p>
+      <p class="text">
+      Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci scriptorem cum ea, an ignota signiferumque nec. No dicunt sanctus moderatius sed, meliore inermis ei mea. Utinam impedit maiestatis sea ad, quis efficiendi eu mel, ea solet placerat phaedrum vis. Et vix causae aliquam, commodo blandit imperdiet ex his.
+      </p>
+      <p class="text">
+          Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora definiebas cotidieque. Eu pri reque sapientem contentiones, fierent conclusionemque mei in. Saepe veniam ne mei, ut facilisi omittantur nec.
+      </p>
+      <p class="text">
+          Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus.</p>
+  </div>
+
+  <section class="table">
+    <table style="width:100%">
+      <tr><th>Larimer Square</th>
+        <th>Millenium Bridge</th>
+        <th>Molly Brown House</th>
+      </tr>
+      <tr>
+        <td><img src="images/2.jpg" alt="Larimer Square" height= 200px width= 350px object_fit="cover"></td>
+        <td><img src="images/5.jpg" alt="Larimer Square" height= 200px width= 350px object_fit="cover"></td>
+        <td><img src="images/3.jpg" alt="Larimer Square" height= 200px width= 350px object_fit="cover"></td>
+      </tr>
+    </table>
+  </section>
+
+
+
+
+
 
   </body>
 </html>
-
-
-
-
